--- a/ByteBank/ByteBank.csproj
+++ b/ByteBank/ByteBank.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Funcionarios\Funcionario.cs" />
     <Compile Include="Funcionarios\GerenteDeConta.cs" />
     <Compile Include="GerenciadorBonificacao.cs" />
+    <Compile Include="ParceiroComercial.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sistemas\Autenticavel.cs" />
